-
Bug
-
Resolution: Done
-
P4: Low
-
Qt Creator 4.0.0-beta1
-
Windows 7 x64
-
d17ff12a31d04720058bfd3b1e733e9a71520881
(Cannot check atm, but believe the bug is present in 4.0 also)
This is directly related to QTCREATORBUG-15544, which added filtering to both local and remote branches.
Steps to reproduce:
- Have a repository with a local and remote branch "foo"
- The local branch must be inactive for some time, so it's not displayed when "Include old entries" is unchecked
- Select the remote branch foo, click Add, the Add Branch dialog suggests "foo" as local branch name
- The Version Control pane shows "cannot run git branch [...] a branch named 'foo' already exists."
- If include old entries is checked, the Add Branch dialog suggests "foo2" as local branch name, which works as expected
For Gerrit Dashboard: QTCREATORBUG-16264 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
159169,2 | Git: Filter obsolete branch names when adding a branch | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
165298,2 | Git: Refix filtering of obsolete branches when adding a branch | 4.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |