Git: Filter obsolete branch names when adding a branch

Task-number: QTCREATORBUG-16264
Change-Id: Ifcb04c7740ab274be590f53757e013da43ad96f1
Reviewed-by: André Hartmann <aha_1980@gmx.de>